// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header List Component Dark Theme renders header list component dark mode 1`] = `
<View
  style={Object {}}
>
  <TextField
    numberOfLines={0}
    style={
      Array [
        Object {
          "color": "#FFF",
          "marginTop": -22,
        },
      ]
    }
    textStyle={
      Object {
        "fontSize": 20,
      }
    }
  />
  <TextInput
    onChangeText={[Function]}
    style={
      Object {
        "borderBottomWidth": 0.7,
        "height": 40,
        "marginLeft": -2,
        "marginTop": 16,
      }
    }
  />
</View>
`;

exports[`Header List Component Default Theme renders header list component light mode 1`] = `
<View
  style={Object {}}
>
  <TextField
    numberOfLines={0}
    style={
      Array [
        Object {
          "color": "#111",
          "marginTop": -22,
        },
      ]
    }
    textStyle={
      Object {
        "fontSize": 20,
      }
    }
  />
  <TextInput
    onChangeText={[Function]}
    style={
      Object {
        "borderBottomWidth": 0.7,
        "height": 40,
        "marginLeft": -2,
        "marginTop": 16,
      }
    }
  />
</View>
`;
